--- a/src/assets/scss/components/pagination.scss
+++ b/src/assets/scss/components/pagination.scss
@@ -2,7 +2,7 @@ nav.c-pagination {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 2rem;
+    gap: 1rem;
 
     svg {
         color: inherit;
